DOA with General Mocking Added

--- a/ApexTrigger/ApexTriggerUserCases/force-app/main/default/classes/AccountDOAMock.cls
+++ b/ApexTrigger/ApexTriggerUserCases/force-app/main/default/classes/AccountDOAMock.cls
@@ -1,41 +1,28 @@
+@isTest
 public class AccountDOAMock implements IAccountDOA
 {
-    public List<Account> accountToReturn = new List<Account>();
-
-    Public List<contact> getContactForUpdateAccountPhoneToContact(Set<Id> accids)
+     public List<Contact> contactsToReturn = new List<Contact>();
+     public List<Account> accountToReturn = new List<Account>();
+    
+     Public List<contact> getContactForUpdateAccountPhoneToContact(Set<Id> accids)
     {
-       return [Select ID, Phone, AccountID From Contact Where AccountID IN : accids];
+       return contactsToReturn;
     }
 
     Public List<Account> getContactForUpdateAccountPhoneToContactSOQL(Set<Id> accids)
     {
-       return [Select Id, Phone,(Select Phone From Contacts )From Account Where ID IN : accIds];
+       return accountToReturn;
         
     }
 
     Public List<Contact> getContactForUpdateAccountBillingAddressToContact(Set<Id> accids)
     {
-        return [Select ID, AccountID From Contact Where AccountID IN : accids];
+        return contactsToReturn;
     }
 
     Public List<Account> getContactUpdateAccountBillingAddressToContactSOQL(Set<Id> accids)
     {
-        return [Select Id, BillingCountry, BillingCity, BillingPostalCode, BillingState, BillingStreet,
-        (Select ID From Contacts) From Account Where ID IN : accIds];
+        return accountToReturn;
     }
-
-    public void updateRating(List<Account> accList)
-    {
-        for(Account acc : accList)
-          {
-            if(acc.Industry == 'Media' || acc.Industry == 'Energy')
-            {
-                //Not to do any DMl operation bcz changes are made in before trigger and its own records so
-                //it automatically got commited itself
-                acc.Rating = 'Hot';
-            }
-          }
-    }
-     
 
 }
