--- a/ApexTrigger/ApexTriggerUserCases/force-app/main/default/classes/AccountController.cls
+++ b/ApexTrigger/ApexTriggerUserCases/force-app/main/default/classes/AccountController.cls
@@ -2,19 +2,63 @@ public class AccountController{
     @testVisible static IAccountControllerDOA accountDoaInstance = new AccountControllerDOA();
     
     Public List<Account> getAccounts(){
-        return accountDoaInstance.getAccountDetails();
+        List<Account> accList;
+        try{ 
+           accList = accountDoaInstance.getAccountDetails();}
+        catch(Exception e)
+        {
+            System.debug('Exception type caught: ' + e.getTypeName()+
+                         ' Message: ' + e.getMessage()+
+                         'Cause: ' + e.getCause()+    // returns null
+                         'Line number: ' + e.getLineNumber()+   
+                         'Stack trace: ' + e.getStackTraceString());  
+        }
+        return accList;
     }
     
      public List<Account> createNewAccounts(List<Account> accList){
-        return accountDoaInstance.createAccounts(accList);
+         List<Account> accListToReturn;
+        try{ 
+           accListToReturn = accountDoaInstance.createAccounts(accList);}
+        catch(Exception e)
+        {
+            System.debug('Exception type caught: ' + e.getTypeName()+
+                         ' Message: ' + e.getMessage()+
+                         'Cause: ' + e.getCause()+    // returns null
+                         'Line number: ' + e.getLineNumber()+   
+                         'Stack trace: ' + e.getStackTraceString());  
+        }
+        return accListToReturn;
     }
     
      public List<Account> updateOldAccounts(List<Account> accList){
-        return accountDoaInstance.updateAccounts(accList);
+         List<Account> accListToReturn;
+        try{ 
+           accListToReturn = accountDoaInstance.updateAccounts(accList);}
+        catch(Exception e)
+        {
+            System.debug('Exception type caught: ' + e.getTypeName()+
+                         ' Message: ' + e.getMessage()+
+                         'Cause: ' + e.getCause()+    // returns null
+                         'Line number: ' + e.getLineNumber()+   
+                         'Stack trace: ' + e.getStackTraceString());  
+        }
+        return accListToReturn;
     }
     
      public List<Account> deleteOldAccounts(List<Account> accList){
-        return accountDoaInstance.deleteAccounts(accList);
+         List<Account> accListToReturn;
+        try{ 
+           accListToReturn = accountDoaInstance.deleteAccounts(accList);}
+        catch(Exception e)
+        {
+            System.debug('Exception type caught: ' + e.getTypeName()+
+                         ' Message: ' + e.getMessage()+
+                         'Cause: ' + e.getCause()+    // returns null
+                         'Line number: ' + e.getLineNumber()+   
+                         'Stack trace: ' + e.getStackTraceString());  
+        }
+        return accListToReturn; 
     }
      
 }
